--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -12,13 +12,12 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
+          registry-url: 'https://registry.npmjs.org/'
           cache: 'npm'
-          scope: '@fsavio'
       - run: npm ci
       - run: npm test
 
   publish-npm:
-    if: startsWith(github.ref, 'refs/tags/')  # only publish on tag pushes
     needs: build
     runs-on: ubuntu-latest
     steps:
@@ -26,8 +25,11 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-          registry-url: 'https://registry.npmjs.org'
+          registry-url: 'https://registry.npmjs.org/'
           cache: 'npm'
+      - run: npm whoami
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       - run: npm ci
       - run: npm publish --provenance --access public
         env:
